--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,6 +36,7 @@
 *ngIf="isLoggedIn && user"
 class="example-icon favorite-icon ml20" 
 mat-button
+routerLink="/admin/profile"
 aria-label="Example icon-button with heart icon">
 {{login.getUser().username}}
 </button>
