--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -5,9 +5,9 @@
           <app-sidebar></app-sidebar>
         </div>
   
-        <div class="col-md-10">
+        <!-- <div class="col-md-10"> -->
           <router-outlet></router-outlet>
-        </div>
+        <!-- </div> -->
       <!-- </div> -->
     <!-- </div> -->
   </div>
