--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -7,21 +7,21 @@
     <button mat-list-item routerLink="/admin/profile">
       <mat-icon mat-list-icon>account_circle</mat-icon> Profile
     </button>
-    <button mat-list-item routerLink="/admin/categories">
+    <button mat-list-item routerLink="/admin/view-analyst">
       <mat-icon mat-list-icon>list</mat-icon> View Analyst
     </button>
     <button mat-list-item routerLink="/admin/add-analyst">
       <mat-icon mat-list-icon>add_circle_outline</mat-icon> Add Analyst
     </button>
-    <button mat-list-item routerLink="/admin/view-analyst">
+    <button mat-list-item routerLink="/admin/view-user">
       <mat-icon mat-list-icon>quiz</mat-icon> View User
     </button>
-    <button mat-list-item routerLink="/admin/add-quiz">
+    <!-- <button mat-list-item routerLink="/admin/add-quiz">
       <mat-icon mat-list-icon>add</mat-icon> Update Analyst
-    </button>
-    <button mat-list-item routerLink="/admin/profile">
+    </button> -->
+    <!-- <button mat-list-item routerLink="/admin/profile">
       <mat-icon mat-list-icon>logout</mat-icon> Logout
-    </button>
+    </button> -->
   </div>
   </mat-action-list>
   
