--- a/src/app/pages/admin/sidebar/sidebar.component.html
+++ b/src/app/pages/admin/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <mat-action-list>
-    <div mat-subheader>
+    <div mat-subheader></div>
     <button routerLink="/admin" mat-list-item>
       <mat-icon mat-list-icon>home</mat-icon> Home
     </button>
@@ -16,13 +16,13 @@
     <button mat-list-item routerLink="/admin/view-user">
       <mat-icon mat-list-icon>quiz</mat-icon> View User
     </button>
-    <!-- <button mat-list-item routerLink="/admin/add-quiz">
-      <mat-icon mat-list-icon>add</mat-icon> Update Analyst
-    </button> -->
+    <button mat-list-item routerLink="/admin/add-quiz">
+      <mat-icon mat-list-icon>add</mat-icon> View Policy
+    </button>
     <!-- <button mat-list-item routerLink="/admin/profile">
       <mat-icon mat-list-icon>logout</mat-icon> Logout
     </button> -->
-  </div>
+  
   </mat-action-list>
   
 </mat-card>
